--- a/app/assets/stylesheets/foundation_and_overrides.scss
+++ b/app/assets/stylesheets/foundation_and_overrides.scss
@@ -9,7 +9,7 @@
 
 // We include everything by default.  To slim your CSS, remove components you don't use.
 
-@include foundation-global-styles;
+// @include foundation-global-styles;
 @include foundation-xy-grid-classes;
 //@include foundation-grid;
 //@include foundation-flex-grid;
