--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,12 +9,13 @@
 <body>
   <div class="top-bar-bg">
     <nav class="top-bar">
-      <h1><a href="/">Dashy</a></h1>
+      <h1><a href="/stash">Dashy</a></h1>
 
       <section class="top-bar-section">
         <ul class="right">
           <%- if current_user -%>
           <li><%= link_to 'Sign Out', destroy_user_session_path, method: :delete %></li>
+          <li><%= link_to 'My Stash', '/stash' %></li>
           <%- else -%>
           <li><%= link_to 'Sign Up', new_user_registration_path %></li>
           <li><%= link_to 'Sign In', new_user_session_path %></li>
