--- a/app/assets/stylesheets/default.scss
+++ b/app/assets/stylesheets/default.scss
@@ -7,15 +7,9 @@ body {
 }
 
 #app {
-  margin: 0 auto;
-  max-width: 70rem;
+  margin: 0 1rem;
 }
 
 .top-bar-bg {
   background-color: #FFFF;
-}
-
-.top-bar {
-  max-width: 70rem;
-  margin: 0 auto;
 }
