--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
 <body>
   <div class="top-bar-bg">
     <nav class="top-bar">
-      <h1><a href="/stash">Dashy</a></h1>
+      <h1><a href="/dash">Dashy</a></h1>
 
       <section class="top-bar-section">
         <ul class="right">
