--- a/app/assets/stylesheets/default.scss
+++ b/app/assets/stylesheets/default.scss
@@ -1,5 +1,6 @@
 $primary: #F8F8F8;
 $secondary: #339CC2;
+$greyOnWhite: #494848;
 
 body {
   background-color: $primary;
@@ -12,4 +13,43 @@ body {
 
 .top-bar-bg {
   background-color: #FFFF;
+}
+
+.stash-tile {
+  display: inline-block;
+  width: 20rem;
+  height: 100vh;
+}
+
+.stash-tile-header {
+  width: fit-content;
+  margin: 0 auto;
+  font-size: 2rem;
+  color: white;
+}
+
+.journals-stash {
+  $background-color: #1779ba;
+  background-color: $background-color;
+  span {
+    font-size: 2rem;
+    color: $background-color;
+  }
+}
+
+.content-tile {
+  list-style: none;
+  color: $greyOnWhite;
+  font-size: 1.5rem;
+  background-color: white;
+  width: 90%;
+  padding: 0.2rem;
+  margin: 0.5rem 0 0.5rem 2%;
+  border-radius: 5px;
+  transition: ease-in-out;
+  transition-duration: 0.3s;
+}
+
+.content-tile:hover {
+  margin: 0.5rem 0 0.5rem 7%;
 }
