--- a/app/assets/stylesheets/default.scss
+++ b/app/assets/stylesheets/default.scss
@@ -47,3 +47,13 @@ body {
 .content-tile:hover {
   margin: 0.5rem 0 0.5rem 7%;
 }
+
+.navbar {
+  min-height: 6rem;
+}
+
+.top-bar-profile-photo {
+  height: 4rem;
+  width: 4rem;
+  border-radius: 3rem;
+}
