--- a/app/assets/stylesheets/default.scss
+++ b/app/assets/stylesheets/default.scss
@@ -1,5 +1,6 @@
 $bg_background: #F8F8F8;
 $greyOnWhite: #494848;
+$journal-color: #20C0FA;
 
 body {
   background-color: $bg_background;
@@ -23,11 +24,14 @@ body {
 }
 
 .journals-stash {
-  $background-color: #1779ba;
+  $background-color: $journal-color;
   background-color: $background-color;
   span {
     font-size: 2rem;
     color: $background-color;
+  }
+  a {
+    text-decoration: none;
   }
 }
 
@@ -65,6 +69,10 @@ body {
   align-content: stretch;
 }
 
+.dashboard-container {
+  width: -webkit-fill-available;
+}
+
 #side-bar {
   background-color: #FFFF;
 
@@ -85,6 +93,27 @@ body {
   font-size: 2rem;
   list-style: none;
   text-align: center;
+  .iconTextHover {
+    opacity: 0;
+    background-color: #FFFF;
+    position:absolute;
+    margin: -2.7rem 0 0 3.1rem;
+    border-radius: 1rem;
+    color: $greyOnWhite;
+    font-size: 1.3rem;
+    padding: 0.2rem 1rem 0.2rem;
+    transition: opacity .25s ease-in-out;
+    -moz-transition: opacity .25s ease-in-out;
+    -webkit-transition: opacity .25s ease-in-out;
+  }
+}
+
+.side-bar-icon:hover {
+  .iconTextHover {
+    opacity: 1;
+    margin: -2.7rem 0 0 3.1rem;
+    tran:.2s linear;
+  }
 }
 
 .active-icon {
@@ -114,7 +143,7 @@ body {
     height: 15%;
     padding: 0.5rem;
     color: white;
-    background-color: #20C0FA;
+    background-color: $journal-color;
     i {
       float: right;
     }
@@ -133,8 +162,18 @@ body {
 @media only screen and (max-width: 768px) {
 
 }
-// mobile
-@media only screen and (max-width: 360px) {
+
+// mobiile L
+@media only screen and (max-width: 425px) {
+  .dashboard-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+}
+
+// mobile m
+@media only screen and (max-width: 375px) {
   #side-bar {
     display: none;
   }
