Fixed unsplash positioning

--- a/app/assets/stylesheets/unsplash.scss
+++ b/app/assets/stylesheets/unsplash.scss
@@ -1,5 +1,7 @@
 .unsplash-badge-container {
-  float: right;
+  position: fixed;
+  bottom: 0;
+  right: 0;
   background-color:black;
   color:white;
   text-decoration:none;
