--- a/app/assets/stylesheets/default.scss
+++ b/app/assets/stylesheets/default.scss
@@ -74,14 +74,16 @@ body {
 }
 
 .dashboard-container {
+  margin-left: 1rem;
   width: -webkit-fill-available;
 }
 
 #side-bar {
   background-color: #FFFF;
+  border-bottom-right-radius: 1rem;
+  border-bottom-left-radius: 1rem;
 
   width: 3rem;
-  height: 100vh;
   padding-top: 1rem;
   padding-bottom: 1rem;
   -webkit-box-shadow: 4px 0px 5px 0px rgba(107,107,107,0.48);
@@ -133,33 +135,10 @@ body {
   display: inline-flex;
   width: 20rem;
   height: 20rem;
+  transition: all .2s ease-in-out;
 }
-
-.journal-widget {
-  width: 90%;
-  height: 90%;
-  border-radius: 3%;
-  margin: auto;
-  background-color: white;
-  h4 {
-    overflow: hidden;
-    margin:0;
-    height: 15%;
-    padding: 0.5rem;
-    color: white;
-    background-color: $journal-color;
-    i {
-      float: right;
-    }
-  }
-  div {
-    padding: 0.5rem;
-    font-size: 1rem;
-    height: 85%;
-    overflow: scroll;
-    p {
-    }
-  }
+.widget-tile:hover {
+  transform: scale(1.05);
 }
 
 .modalform-text {
@@ -199,9 +178,10 @@ body {
 
 }
 
-// mobiile L
+// mobile L
 @media only screen and (max-width: 425px) {
   .dashboard-container {
+    margin-left: 0;
     display: flex;
     flex-direction: column;
     align-items: center;
