Added a higher z-index for icon hover text

--- a/app/assets/stylesheets/default.scss
+++ b/app/assets/stylesheets/default.scss
@@ -102,6 +102,7 @@ body {
   list-style: none;
   text-align: center;
   .iconTextHover {
+    z-index: 100;
     opacity: 0;
     background-color: #FFFF;
     position:absolute;
