--- a/app/assets/stylesheets/default.scss
+++ b/app/assets/stylesheets/default.scss
@@ -102,8 +102,8 @@ body {
   list-style: none;
   text-align: center;
   .iconTextHover {
-    z-index: 100;
-    opacity: 0;
+    z-index: 10;
+    display: none;
     background-color: #FFFF;
     position:absolute;
     margin: -2.7rem 0 0 3.1rem;
@@ -119,10 +119,14 @@ body {
 
 .side-bar-icon:hover {
   .iconTextHover {
-    opacity: 1;
+    display: block;
     margin: -2.7rem 0 0 3.1rem;
     tran:.2s linear;
   }
+}
+
+.side-bar-icon:hover .iconTextHover:hover {
+  opacity: none;
 }
 
 .active-icon {
