--- a/app/assets/stylesheets/widgets.scss
+++ b/app/assets/stylesheets/widgets.scss
@@ -10,7 +10,17 @@ $journal-color: #20C0FA;
 .journal-widget {
   border-radius: 3%;
   background-color: white;
-  // padding-bottom: 0.5rem;
+  .description {
+    background: #20c0fa;
+    padding: 0.2rem 0.5rem 0.6rem;
+    margin: 0;
+    color: white;
+    border-bottom-left-radius: 2rem;
+    border-bottom-right-radius: 2rem;
+  }
+  p {
+    margin: 0;
+  }
   h4 {
     overflow: hidden;
     margin:0;
@@ -25,8 +35,24 @@ $journal-color: #20C0FA;
   div {
     padding: 0.5rem;
     font-size: 1rem;
-    height: 85%;
+    height: 11rem;
     overflow: scroll;
+  }
+
+  ul {
+    padding: 0;
+    list-decoration: none;
+    margin: 0;
+    li {
+      margin: 0;
+      overflow: auto;
+      white-space: nowrap;
+      text-overflow: ellipsis;
+    }
+
+    li:hover {
+      background-color: #f9f9f9;
+    }
   }
 }
 
