--- a/app/assets/stylesheets/journals.scss
+++ b/app/assets/stylesheets/journals.scss
@@ -1,14 +1,11 @@
+$journalsSidebarWidth: 200px;
+$entriesSidebarWidth: 270px;
+
 .journals-index-container {
   width: 100%;
   height: 100vh;
-  background-color: green;
   display: flex;
   align-content: stretch;
-  .sidebar-area {
-    width: 470px;
-    height: 100%;
-    background-color: red;
-  }
 
   .entry-area {
     flex-grow: 1;
@@ -21,7 +18,7 @@
     height: 100%;
     padding: 1.5rem 1.5rem 0;
     overflow: hidden;
-
+    position: relative;
     .entry-topbar {
       display: flex;
       justify-content: space-between;
@@ -78,36 +75,36 @@
   }
 
   #journals-sidebar {
-    z-index: 20;
+    // z-index: 20;
     background: #151718;
-    width: 200px;
-    height: 100%;
     display: block;
+    left:0;
+    width: $journalsSidebarWidth;
+    height: 100%;
     position: absolute;
-    left: -200px;
     top: 720;
     transition: left 0.3s linear;
     font-family: "Helvetica Neue", Helvetica, Arial;
     overflow: scroll;
   }
 
-  #journals-sidebar.visible {
-    left:0;
+  #journals-sidebar.hide {
+    left: -$journalsSidebarWidth;
     transition: left 0.3s linear;
   }
 
   #entries-sidebar {
-    z-index: 20;
+    // z-index: 20;
     background: #edf1f5;
     border-right: thin solid #ccc;
     border-width: thin;
-    width: 270px;
+    width: $entriesSidebarWidth;
     height: 100%;
     display: block;
     position: absolute;
-    left: 200px;
+    left:$journalsSidebarWidth;
+    transition: left 0.5s linear;
     top: 720;
-    transition: left 0.3s linear;
     font-family: "Helvetica Neue", Helvetica, Arial;
     overflow: scroll;
     .item {
@@ -175,6 +172,16 @@
     }
   }
 
+  #entries-sidebar.hide {
+    left: $journalsSidebarWidth - $entriesSidebarWidth;
+    transition: left 0.3s linear;
+  }
+
+  #entries-sidebar.hide-two {
+    left: -$entriesSidebarWidth;
+    transition: left 0.1s linear;
+  }
+
   ul {
     margin:0px;
     padding:0px;
@@ -208,21 +215,40 @@
     color: white;
   }
 
-  .sidebar-btn {
-    width: 40px;
-    height: 30px;
-    z-index: -1;
-    border-radius: 10px;
-    text-align: right;
-    padding-right: 7px;
-    background-color: #20C0FA;
-    font-size: 20px;
-    color: white;
-    margin: 20px;
-    display: block;
-    cursor: pointer;
+  .sidebar-area {
+    height: 100%;
+    width: $journalsSidebarWidth + $entriesSidebarWidth;
+    transition: width 0.7s;
+  }
+
+  .sidebar-area.hide-one {
+    transition: width 0.5s;
+    width: $journalsSidebarWidth;
+  }
+
+  .sidebar-area.hide-two {
+    transition: width 0.4s;
+    width: 0;
+  }
+
+  .toggle-buttons {
     position: absolute;
-    top: 720;
-    right: -40px;
+    left: 5px;
+    top: 0;
+    div {
+      margin: 0;
+    }
+    input {
+      outline: none;
+      margin: 0.1rem;
+      background: #20C0FA;
+      border: none;
+      color: white;
+      font-weight: 900;
+      padding-right: 4px;
+      padding-left: 4px;
+      font-size: 0.5rem;
+      border-radius: 0.3rem;
+    }
   }
 }
