Added width restriction to profile photo on registration

--- a/app/assets/stylesheets/default.scss
+++ b/app/assets/stylesheets/default.scss
@@ -114,6 +114,10 @@ body {
   text-align: left;
 }
 
+.registration-photo {
+  max-width: 278px;
+}
+
 .landing-page {
   height: 100vh;
   width: inherit;
