Select journal on default and hide entry side bar if no journals exist

--- a/app/assets/stylesheets/journals.scss
+++ b/app/assets/stylesheets/journals.scss
@@ -216,6 +216,7 @@ $entriesSidebarWidth: 270px;
   }
 
   .sidebar-area {
+    background-color: #FFFF;
     height: 100%;
     width: $journalsSidebarWidth + $entriesSidebarWidth;
     transition: width 0.7s;
