--- a/app/assets/stylesheets/default.scss
+++ b/app/assets/stylesheets/default.scss
@@ -1,4 +1,6 @@
-$bg_background: #F8F8F8;
+// $bg_background: #F8F8F8;
+$vhMinusNavbar: calc(100vh - 96px);
+$bg_background: #ececec;
 $greyOnWhite: #494848;
 
 body {
@@ -12,7 +14,7 @@ body {
 
 .navbar {
   min-height: 6rem;
-  box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16), 0 2px 10px 0 rgba(0,0,0,0.12);
+  box-shadow: 55px 2px 5px 0 rgba(0, 0, 0, 0.16), 55px 2px 10px 0 rgba(0, 0, 0, 0.1);
 }
 
 .navbar-brand {
@@ -32,15 +34,15 @@ body {
 }
 
 .dashboard-container {
+  height: $vhMinusNavbar;
   margin-left: 1rem;
   width: -webkit-fill-available;
+  overflow-y: auto;
 }
 
 #side-bar {
   background-color: #FFFF;
-  height: 100vh;
-  border-bottom-right-radius: 1rem;
-  border-bottom-left-radius: 1rem;
+  height: $vhMinusNavbar;
 
   width: 3rem;
   padding-top: 1rem;
@@ -102,6 +104,10 @@ body {
 }
 
 .widget-child {
+  box-shadow: 0px 0 6px 0px #7f7a7a;
+}
+
+.widget-child {
   transition: all .2s ease-in-out;
 }
 .widget-child:hover {
@@ -119,7 +125,7 @@ body {
 }
 
 .landing-page {
-  height: 100vh;
+  height: $vhMinusNavbar;
   width: inherit;
   background-size: cover;
   background-position: center;
@@ -153,6 +159,10 @@ body {
   font-size: 1.5rem;
   width: 0;
   height: 0;
+}
+
+.btn-primary {
+  background-color: #007BFE;
 }
 
 .remove-widget-icon:hover + .widget-child {
