--- a/app/assets/stylesheets/widgets.scss
+++ b/app/assets/stylesheets/widgets.scss
@@ -216,7 +216,8 @@ $journal-color: #38acd6;
   position: relative;
   width: 100%;
   height: 100%;
-  display: block;
+  display: flex;
+  justify-content: space-around;
   .close-modal-area {
     position: absolute;
     width: 100%;
@@ -226,10 +227,9 @@ $journal-color: #38acd6;
     font-family: 'Source Sans Pro', sans-serif;
     position: relative;
     background-color: #ffff88;
-    width: 45%;
+    width: 500px;
     height: 80%;
     top: 7%;
-    left: 25.5%;
     textarea {
       height: 100%;
       width: 100%;
